Fix 反射寫法